# foundry-rle-harness-profile

./: .gitignore  README.md  schema.yaml
envs/m365_number_guess_env/: README.md  __init__.py  client.py  grading.py  harness-profile.json  logic.py  models.py  pyproject.toml  rollout_example.py
envs/m365_number_guess_env/examples/: step-compare.json  step-guess.json
envs/m365_number_guess_env/server/: __init__.py  app.py  number_guess_environment.py
envs/m365_poc_env/: README.md  __init__.py  harness-profile.json  logic.py  models.py  pyproject.toml
envs/m365_poc_env/examples/: step-success.json
envs/m365_poc_env/server/: Dockerfile  __init__.py  app.py  m365_poc_environment.py
examples/: code-rl.yaml  finite-episodic-sokoban.yaml  mcp-tool-finqa.yaml  multi-action-git-tools.yaml  one-shot-answer.yaml
tests/: test_m365_poc_env.py  test_number_guess_env.py
