[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-m365-poc-env"
version = "0.1.0"
description = "M365 hello-world environment for Foundry RLE/OpenEnv collaboration"
requires-python = ">=3.10"
dependencies = [
    "openenv>=0.3.1",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "m365_poc_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["m365_poc_env", "m365_poc_env.server"]
package-dir = {"m365_poc_env" = ".", "m365_poc_env.server" = "server"}